Adding working dir to the parameters

--- a/app/createContainer/createContainer.html
+++ b/app/createContainer/createContainer.html
@@ -147,8 +147,8 @@
                         <h4>Working directory
                             <small>(-w, --workdir)</small>
                         </h4>
-                        <input type="text" class="form-control" id="newContainerName" ng-model="newContainerName"
-                               placeholder="container name">
+                        <input type="text" class="form-control" id="newContainerName" ng-model="workDir"
+                               placeholder="Specify a working directory">
                     </div>
 
                 </div>
