Removing duplicated id-s

--- a/app/createContainer/createContainer.html
+++ b/app/createContainer/createContainer.html
@@ -147,7 +147,7 @@
                         <h4>Working directory
                             <small>(-w, --workdir)</small>
                         </h4>
-                        <input type="text" class="form-control" id="newContainerName" ng-model="workDir"
+                        <input type="text" class="form-control" ng-model="workDir"
                                placeholder="Specify a working directory">
                     </div>
 
@@ -169,32 +169,32 @@
                         </div>
                     </div>
                     <div class="col-md-6">
-                        <input type="text" class="form-control" id="newContainerName" ng-model="newContainerName"
+                        <input type="text" class="form-control" ng-model="newContainerName"
                                placeholder="container name">
 
                     </div>
                     <div class="col-md-6">
-                        <input type="text" class="form-control" id="newContainerName" ng-model="newContainerName"
+                        <input type="text" class="form-control" ng-model="newContainerName"
                                placeholder="container name">
 
                     </div>
                     <div class="col-md-6">
-                        <input type="text" class="form-control" id="newContainerName" ng-model="newContainerName"
+                        <input type="text" class="form-control" ng-model="newContainerName"
                                placeholder="container name">
 
                     </div>
                     <div class="col-md-6">
-                        <input type="text" class="form-control" id="newContainerName" ng-model="newContainerName"
+                        <input type="text" class="form-control" ng-model="newContainerName"
                                placeholder="container name">
 
                     </div>
                     <div class="col-md-6">
-                        <input type="text" class="form-control" id="newContainerName" ng-model="newContainerName"
+                        <input type="text" class="form-control" ng-model="newContainerName"
                                placeholder="container name">
 
                     </div>
                     <div class="col-md-6">
-                        <input type="text" class="form-control" id="newContainerName" ng-model="newContainerName"
+                        <input type="text" class="form-control" ng-model="newContainerName"
                                placeholder="container name">
 
                     </div>
@@ -202,11 +202,11 @@
                         <h4>Expose a port or a range of ports
                             <small>(--expose)</small>
                         </h4>
-                        <input type="text" class="form-control" id="newContainerName" ng-model="newContainerName"
+                        <input type="text" class="form-control" ng-model="newContainerName"
                                placeholder="container name">
-                        <input type="text" class="form-control" id="newContainerName" ng-model="newContainerName"
+                        <input type="text" class="form-control" ng-model="newContainerName"
                                placeholder="container name">
-                        <input type="text" class="form-control" id="newContainerName" ng-model="newContainerName"
+                        <input type="text" class="form-control" ng-model="newContainerName"
                                placeholder="container name">
 
                     </div>
@@ -230,14 +230,14 @@
                     <h4>Entrypoints
                         <small>(--entrypoint)</small>
                     </h4>
-                    <input type="text" class="form-control" id="newContainerName" ng-model="newContainerName"
+                    <input type="text" class="form-control" ng-model="newContainerName"
                            placeholder="container name">
                 </div>
                 <div class="col-md-12">
                     <h4>Working directory
                         <small>(-w, --workdir)</small>
                     </h4>
-                    <input type="text" class="form-control" id="newContainerName" ng-model="newContainerName"
+                    <input type="text" class="form-control" ng-model="newContainerName"
                            placeholder="container name">
                 </div>
 
