Adding publish all ports

--- a/app/createContainer/createContainer.html
+++ b/app/createContainer/createContainer.html
@@ -163,7 +163,8 @@
                     <div class="col-md-12">
                         <div class="checkbox">
                             <label>
-                                <input type="checkbox"> Publish all exposed ports to random ports (-P,
+                                <input type="checkbox" ng-model="publishAllPorts"> Publish all exposed ports to random
+                                ports (-P,
                                 --publish-all)
                             </label>
                         </div>
