Adding expose/publish elements to the page

--- a/app/createContainer/createContainer.html
+++ b/app/createContainer/createContainer.html
@@ -169,48 +169,22 @@
                             </label>
                         </div>
                     </div>
-                    <div class="col-md-6">
-                        <input type="text" class="form-control" ng-model="newContainerName"
-                               placeholder="container name">
-
-                    </div>
-                    <div class="col-md-6">
-                        <input type="text" class="form-control" ng-model="newContainerName"
-                               placeholder="container name">
-
-                    </div>
-                    <div class="col-md-6">
-                        <input type="text" class="form-control" ng-model="newContainerName"
-                               placeholder="container name">
-
-                    </div>
-                    <div class="col-md-6">
-                        <input type="text" class="form-control" ng-model="newContainerName"
-                               placeholder="container name">
-
-                    </div>
-                    <div class="col-md-6">
-                        <input type="text" class="form-control" ng-model="newContainerName"
-                               placeholder="container name">
-
-                    </div>
-                    <div class="col-md-6">
+                    <div class="col-md-12">
+                        <h4>Publish ports
+                            <small>(--publish)</small>
+                        </h4>
                         <input type="text" class="form-control" ng-model="newContainerName"
                                placeholder="container name">
 
                     </div>
                     <div class="col-md-12">
-                        <h4>Expose a port or a range of ports
+                        <h4>Expose ports
                             <small>(--expose)</small>
                         </h4>
                         <input type="text" class="form-control" ng-model="newContainerName"
                                placeholder="container name">
-                        <input type="text" class="form-control" ng-model="newContainerName"
-                               placeholder="container name">
-                        <input type="text" class="form-control" ng-model="newContainerName"
-                               placeholder="container name">
-
                     </div>
+
                 </div>
             </div>
         </div>
