--- a/app/createContainer/createContainer.html
+++ b/app/createContainer/createContainer.html
@@ -83,8 +83,7 @@
                         <!--</div>-->
                         <div class="checkbox">
                             <label>
-                                <input type="checkbox" ng-model="privileged"> Give extended privileges to this
-                                container (--privileged)
+                                <input type="checkbox" ng-model="privileged"> Give extended privileges to this container (--privileged)
                             </label>
                         </div>
                     </div>
@@ -163,9 +162,7 @@
                     <div class="col-md-12">
                         <div class="checkbox">
                             <label>
-                                <input type="checkbox" ng-model="publishAllPorts"> Publish all exposed ports to random
-                                ports (-P,
-                                --publish-all)
+                                <input type="checkbox" ng-model="publishAllPorts"> Publish all exposed ports as random assigned port (-P, --publish-all)
                             </label>
                         </div>
                     </div>
@@ -187,7 +184,6 @@
                 </div>
             </div>
         </div>
-
     </div>
     <div class="col-md-4">
         <div class="panel panel-danger">
