--- a/app/createContainer/createContainer.html
+++ b/app/createContainer/createContainer.html
@@ -167,20 +167,21 @@
                         </div>
                     </div>
                     <div class="col-md-12">
-                        <h4>Publish ports
-                            <small>(--publish)</small>
-                        </h4>
-                        <input type="text" class="form-control" ng-model="newContainerName"
-                               placeholder="container name">
-
-                    </div>
-                    <div class="col-md-12">
                         <h4>Expose ports
                             <small>(--expose)</small>
                         </h4>
                         <input type="text" class="form-control" ng-model="newContainerName"
                                placeholder="container name">
                     </div>
+                    <div class="col-md-12">
+                        <h4>Publish exposed ports
+                            <small>(--publish)</small>
+                        </h4>
+                        <input type="text" class="form-control" ng-model="newContainerName"
+                               placeholder="container name">
+
+                    </div>
+
                 </div>
             </div>
         </div>
