--- a/app/createContainer/createContainer.html
+++ b/app/createContainer/createContainer.html
@@ -83,7 +83,8 @@
                         <!--</div>-->
                         <div class="checkbox">
                             <label>
-                                <input type="checkbox" ng-model="privileged"> Give extended privileges to this container (--privileged)
+                                <input type="checkbox" ng-model="privileged"> Give extended privileges to this container
+                                (--privileged)
                             </label>
                         </div>
                     </div>
@@ -96,8 +97,6 @@
                     <h4 class="panel-title"><span class="fa fa-tachometer"></span> Runtime settings</h4>
                 </div>
                 <div class="panel-body">
-
-
                     <div class="col-md-12">
                         <h4>Environment variables
                             <small>(-e, --env)</small>
@@ -162,16 +161,30 @@
                     <div class="col-md-12">
                         <div class="checkbox">
                             <label>
-                                <input type="checkbox" ng-model="publishAllPorts"> Publish all exposed ports as random assigned port (-P, --publish-all)
+                                <input type="checkbox" ng-model="publishAllPorts"> Publish all exposed ports as random
+                                assigned port (-P, --publish-all)
                             </label>
                         </div>
                     </div>
-                    <div class="col-md-12">
+                    <div class="col-md-11">
                         <h4>Expose ports
                             <small>(--expose)</small>
                         </h4>
-                        <input type="text" class="form-control" ng-model="newContainerName"
-                               placeholder="container name">
+
+                        <div class="form-group input-group" ng-repeat="exposedPort in exposedPorts"
+                             ng-class="{'has-success':exposedPort.status=='valid','has-error':exposedPort.status=='invalid'}">
+                            <span class="input-group-btn">
+                            <input type="text" class="form-control" ng-model="exposedPort.value"
+                                   placeholder="1-65535"
+                                   aria-describedby="exposedPortValidationStatus" ng-keyup="exposedPortValidator()">
+
+                                <button ng-click="deleteExposedPortEntry($index)" title="Delete entry" type="submit"
+                                        class="btn btn-danger"
+                                        style="width: 40px; margin-right: 160px;margin-left: 3px;">
+                                    <span class="fa fa-trash" style="font-size: large"></span>
+                                </button>
+                                </span>
+                        </div>
                     </div>
                     <div class="col-md-12">
                         <h4>Publish exposed ports
